disable cleanup of >2 year old AMIs
This is to avoid accidently deleting something that actually works

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1858,35 +1858,35 @@ jobs:
       
       # From https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/ami-quotas.html
       # The maximum number of public and private AMIs allowed per Region iz 50000.
-      - name: Clean up EOL AMIs
-        if: always()
-        continue-on-error: true
-        env: 
-          PERIOD: "2 years ago"
-        run: |
-          _date=$(date +%Y-%m-%d -d "${PERIOD}")
-          echo "Cleaning up AMI images older than ${PERIOD}"
-          image_ids=$(aws ec2 describe-images \
-              --filters "Name=name,Values=${AMI_NAME%%-*}-*" \
-              --owners "self" \
-              --query 'Images[?CreationDate<`'"${_date}"'`].[ImageId]' --output text)
-          for image_id in ${image_ids}; do
-              _snapshots="$(aws ec2 describe-images --image-ids "${image_id}" --query 'Images[*].BlockDeviceMappings[*].Ebs.SnapshotId' --output text)"
-              if aws ec2 deregister-image --image-id "${image_id}"; then
-                  echo "De-registered AMI ${image_id}"
-                  if [ -n "${_snapshots}" ]; then
-                      for snapshot in ${_snapshots}; do
-                          if aws ec2 delete-snapshot --snapshot-id "${snapshot}"; then
-                              echo "Removed snapshot ${snapshot}"
-                          else
-                              echo "Could not remove snapshot ${snapshot}"
-                          fi
-                      done
-                  fi
-              else
-                  echo "Could not de-register AMI ${image_id}"
-              fi
-          done
+      # - name: Clean up EOL AMIs
+      #   if: always()
+      #   continue-on-error: true
+      #   env: 
+      #     PERIOD: "2 years ago"
+      #   run: |
+      #     _date=$(date +%Y-%m-%d -d "${PERIOD}")
+      #     echo "Cleaning up AMI images older than ${PERIOD}"
+      #     image_ids=$(aws ec2 describe-images \
+      #         --filters "Name=name,Values=${AMI_NAME%%-*}-*" \
+      #         --owners "self" \
+      #         --query 'Images[?CreationDate<`'"${_date}"'`].[ImageId]' --output text)
+      #     for image_id in ${image_ids}; do
+      #         _snapshots="$(aws ec2 describe-images --image-ids "${image_id}" --query 'Images[*].BlockDeviceMappings[*].Ebs.SnapshotId' --output text)"
+      #         if aws ec2 deregister-image --image-id "${image_id}"; then
+      #             echo "De-registered AMI ${image_id}"
+      #             if [ -n "${_snapshots}" ]; then
+      #                 for snapshot in ${_snapshots}; do
+      #                     if aws ec2 delete-snapshot --snapshot-id "${snapshot}"; then
+      #                         echo "Removed snapshot ${snapshot}"
+      #                     else
+      #                         echo "Could not remove snapshot ${snapshot}"
+      #                     fi
+      #                 done
+      #             fi
+      #         else
+      #             echo "Could not de-register AMI ${image_id}"
+      #         fi
+      #     done
 
         # Tear down any AMI's created in the case of a failure - to leave a clean slate for the next run
       - name: Clean up AMI images on failure
