Add S3_DEPLOY_PATH environment variable
This environment variable provides a structured path for deploying artifacts that includes the device slug and OS version, which will be used to organize S3 uploads and downloads.

Change-type: patch
Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -524,6 +524,8 @@ jobs:
       AUTO_CONF_FILE: "${{ github.workspace }}/build/conf/auto.conf"
       BALENARC_BALENA_URL: ${{ needs.balena-lib.outputs.balena_host }}
       DEPLOY_PATH: ${{ github.workspace }}/deploy
+      # Note that this is the DEPLOY_PATH + the device slug and os version
+      S3_DEPLOY_PATH: "${{ github.workspace }}/deploy/${{ needs.balena-lib.outputs.device_slug }}/${{ needs.balena-lib.outputs.os_version }}"
 
     defaults:
       run:
