Revert to GH CLI for artifact downloads
Use the gh CLI to download artifacts from the build job as we've
seen issues with the actions/download-artifact action not reporting
any failures but files unable to be decryptedsuggesting they are not
properly downloaded.

Signed-off-by: Kyle Harding <kyle@balena.io>

--- a/.github/workflows/yocto-build-deploy.yml
+++ b/.github/workflows/yocto-build-deploy.yml
@@ -1061,12 +1061,24 @@ jobs:
 
     steps:
 
-      # https://github.com/actions/download-artifact
+      # Use the gh CLI to download artifacts from the build job as we've seen issues with
+      # the actions/download-artifact action not reporting any failures but files unable to be decrypted
+      # suggesting they are not properly downloaded.
+      # Whereas the gh CLI will report any failures and bail out.
+      # https://github.com/actions/download-artifact/issues/396#issuecomment-2796144940
+      # https://cli.github.com/manual/gh_run_download
+      # https://cli.github.com/manual/gh_help_environment
       - name: Download hostapp artifacts
-        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b # v4.3.0
-        with:
-          name: hostapp-artifacts
-          path: ${{ env.DEPLOY_PATH }}
+        run: |
+          mkdir -p "${DEPLOY_PATH}"
+          gh run download "${GITHUB_RUN_ID}" --dir "${DEPLOY_PATH}" --name hostapp-artifacts
+        env:
+          GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
+          GH_DEBUG: "true"
+          GH_PAGER: "cat"
+          GH_PROMPT_DISABLED: "true"
+          GH_SPINNER_DISABLED: "true"
 
       - name: Decrypt artifacts
         if: inputs.sign-image || needs.balena-lib.outputs.is_private == 'true'
@@ -1365,12 +1377,24 @@ jobs:
 
     steps:
 
-      # https://github.com/actions/download-artifact
-      - name: Download hostapp artifacts
-        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b # v4.3.0
-        with:
-          name: hostapp-artifacts
-          path: ${{ env.DEPLOY_PATH }}
+      # Use the gh CLI to download artifacts from the build job as we've seen issues with
+      # the actions/download-artifact action not reporting any failures but files unable to be decrypted
+      # suggesting they are not properly downloaded.
+      # Whereas the gh CLI will report any failures and bail out.
+      # https://github.com/actions/download-artifact/issues/396#issuecomment-2796144940
+      # https://cli.github.com/manual/gh_run_download
+      # https://cli.github.com/manual/gh_help_environment
+      - name: Download artifacts
+        run: |
+          mkdir -p "${DEPLOY_PATH}"
+          gh run download "${GITHUB_RUN_ID}" --dir "${DEPLOY_PATH}" --name hostapp-artifacts
+        env:
+          GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
+          GH_DEBUG: "true"
+          GH_PAGER: "cat"
+          GH_PROMPT_DISABLED: "true"
+          GH_SPINNER_DISABLED: "true"
 
       - name: Decrypt artifacts
         if: inputs.sign-image || needs.balena-lib.outputs.is_private == 'true'
@@ -1500,12 +1524,24 @@ jobs:
 
     steps:
 
-      # https://github.com/actions/download-artifact
-      - name: Download balena.img.zip artifact
-        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b # v4.3.0
-        with:
-          name: balena.img.zip
-          path: ${{ env.DEPLOY_PATH }}/image
+      # Use the gh CLI to download artifacts from the build job as we've seen issues with
+      # the actions/download-artifact action not reporting any failures but files unable to be decrypted
+      # suggesting they are not properly downloaded.
+      # Whereas the gh CLI will report any failures and bail out.
+      # https://github.com/actions/download-artifact/issues/396#issuecomment-2796144940
+      # https://cli.github.com/manual/gh_run_download
+      # https://cli.github.com/manual/gh_help_environment
+      - name: Download artifacts
+        run: |
+          mkdir -p "${DEPLOY_PATH}/image"
+          gh run download "${GITHUB_RUN_ID}" --dir "${DEPLOY_PATH}/image" --name balena.img.zip
+        env:
+          GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
+          GH_DEBUG: "true"
+          GH_PAGER: "cat"
+          GH_PROMPT_DISABLED: "true"
+          GH_SPINNER_DISABLED: "true"
 
       - name: Decrypt artifacts
         if: inputs.sign-image || needs.balena-lib.outputs.is_private == 'true'
@@ -2089,26 +2125,26 @@ jobs:
           git checkout --force "${{ inputs.meta-balena-ref }}"
           git submodule update --init --recursive
 
-      # https://github.com/actions/download-artifact
-      - name: Download ${{ env.BALENA_OS_IMAGE }}.zip artifact
-        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b # v4.3.0
-        with:
-          name: ${{ env.BALENA_OS_IMAGE }}.zip
-          path: ${{ env.DEPLOY_PATH }}/image
-
-      # https://github.com/actions/download-artifact
-      - name: Download balena-image.docker artifact
-        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b # v4.3.0
-        with:
-          name: balena-image.docker
-          path: ${{ env.DEPLOY_PATH }}
-
-      # https://github.com/actions/download-artifact
-      - name: Download kernel-module-headers artifact
-        uses: actions/download-artifact@448e3f862ab3ef47aa50ff917776823c9946035b # v4.3.0
-        with:
-          name: kernel-module-headers
-          path: ${{ env.DEPLOY_PATH }}
+      # Use the gh CLI to download artifacts from the build job as we've seen issues with
+      # the actions/download-artifact action not reporting any failures but files unable to be decrypted
+      # suggesting they are not properly downloaded.
+      # Whereas the gh CLI will report any failures and bail out.
+      # https://github.com/actions/download-artifact/issues/396#issuecomment-2796144940
+      # https://cli.github.com/manual/gh_run_download
+      # https://cli.github.com/manual/gh_help_environment
+      - name: Download artifacts
+        run: |
+          mkdir -p "${DEPLOY_PATH}/image"
+          gh run download "${GITHUB_RUN_ID}" --dir "${DEPLOY_PATH}/image" --name ${BALENA_OS_IMAGE}.zip
+          gh run download "${GITHUB_RUN_ID}" --dir "${DEPLOY_PATH}" --name balena-image.docker
+          gh run download "${GITHUB_RUN_ID}" --dir "${DEPLOY_PATH}" --name kernel-module-headers
+        env:
+          GH_TOKEN: ${{ github.token }}
+          GH_REPO: ${{ github.repository }}
+          GH_DEBUG: "true"
+          GH_PAGER: "cat"
+          GH_PROMPT_DISABLED: "true"
+          GH_SPINNER_DISABLED: "true"
 
       - name: Decrypt artifacts
         if: inputs.sign-image || needs.balena-lib.outputs.is_private == 'true'
